added the add new button

--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
         </ul>
     </nav>
     <div class="container mt-4" id="form-and-list">
-        <h1 class="display-4 text-center">All Awesome Books</h1>
-        <table class="table table-striped mt-5" id="display-book-list">
-            
-            <tbody id="book-list"></tbody>
+        <div id="list-section">
+            <h1 class="display-4 text-center">All Awesome Books</h1>
+            <table class="table table-striped mt-5" id="display-book-list">
+                
+                <tbody id="book-list"></tbody>
 
-        </table>
+            </table>
+        </div>
 
         <hr>
-        <div id="add-books">
+
+        <div id="add-books-form">
             <h2 class="text-center">Add a New Book</h2>
             <form id="book-form">
                 <div class="form-group">
