completed working on the navigation bar

--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
             </form>
         </div>      
     </div>
-
-    <div class="contact" id="contact-form"> 
-        <h1> Contact information </h1>
-        <p> Do you have any question or you just want to say hello?</p>
-        <ul>
-            <li>our mail@gmail.com</li>
-            <li> our phone number: +00123456879</li>
-            <li>Our adress: Ohaio 22, 40400 nairobi Kenya</li>
-        </ul>
-    </div>
+    <section class="contact-container">
+        <div class="contact" id="contact-form"> 
+            <h1> Contact information </h1>
+            <p> Do you have any question or you just want to say hello?</p>
+            <ul>
+                <li>our mail@gmail.com</li>
+                <li> our phone number: +00123456879</li>
+                <li>Our adress: Ohaio 22, 40400 nairobi Kenya</li>
+            </ul>
+        </div>
+    </section>
 
 
     <script src="script.js"></script>
