Added time to the website

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <li><button id="contact">Contact</button></li>
         </ul>
     </nav>
+
+    <div class="time"><span id="time-section"> Current Time</span></div>
     <div class="container mt-4" id="form-and-list">
         <div id="list-section">
             <h1 class="display-4 text-center">All Awesome Books</h1>
